trying to fix scaling of index main background image on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -4,10 +4,13 @@
 
 #index-main {
     background: url("../images/RagingWolfSunset.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
     background-position: center;
+    margin: 0;
+    background-attachment: fixed;
+    max-width: 100%;
 }
 
 #index-main-container {
